Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
eazyBI
Give feedback to Atlassian
Help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Acknowledged notifications
Core Server
SERVER-2542
race condition between drop and map/reduce client cursor cleanup
Undo Transition
Closed
Export
null
XML
Word
Printable
JSON
Details
Type:
Bug
Resolution:
Done
Priority:
Major - P3
Fix Version/s:
1.7.6
Affects Version/s:
None
Component/s:
None
Labels:
None
Field Tab
Aha! Info
Operating System:
ALL
CAR Domain/s:
None
Aha! Reference:
None
Tracking Level:
None
Risk Status:
None
Exec Notes:
None
Goal Name(s):
None
Goal Link:
None
Attachments
Activity
People
Assignee:
Eliot Horowitz (Inactive)
Reporter:
Eliot Horowitz (Inactive)
Participants:
auto
,
Eliot Horowitz
Votes
:
0
Vote for this issue
Watchers:
0
Start watching this issue
Dates
Created:
Feb 12 2011 10:32:33 PM UTC
Updated:
Jul 12 2016 12:19:25 AM UTC
Resolved:
Feb 12 2011 10:40:13 PM UTC
PagerDuty