fix race condition between dropping database or colletion and map/reduce cleanup SERVER-2542